# music-player-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  main.rs  metadata.rs  utils.rs
