[package]
name = "mddplayer"
version = "1.4.0"
edition = "2024"
authors = ["Xa1st <xux851@gmail.com>"]
description = "一个简易的音乐播放器,用于在命令行内播放音乐，只支持mp3/flac/ogg/aac格式的音频文件。"

[dependencies]
# 音频播放库
rodio = "0.17"
# 命令行参数解析
clap = { version = "4.4", features = ["derive"] }
# 命令行交互
crossterm = "0.27"
# MP3/FLAC 等标签读取
# id3 = "1.16" 
# 移除id3，使用lofty来替代，因为要支持的不只只有mp3
lofty = { version = "0.22" }
# 可靠解码和获取总时长 (Symphonia)
symphonia = { version = "0.5.5" }
# 随机数
rand = "0.8"
# 用于计划符串宽度
unicode-width = "0.2"
# 获取文件列表
glob = "0.3"

# 可选：如果怀疑内存碎片化严重，可以添加 jemallocator
#jemallocator = "0.5" 
#[target.'cfg(not(target_env = "msvc"))'.dependencies]
#jemallocator = "0.5"

[profile.release]
# 级别 3 是最激进的优化，生成最小的二进制文件
opt-level = 3 
# 启用链接时优化 (最重要的一步)
lto = true
# 禁用调试符号（默认 release 模式下是禁用的，但最好明确设置）
debug = false
# 优化生成的可执行文件的大小（尝试使用 z 或 s）
codegen-units = 1 
# 移除所有符号表信息，进一步减小体积
strip = "symbols"


# 【重点：添加 build-dependencies】
[build-dependencies]
winres = "0.1" # 这是一个流行的、成熟的 crate
